--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.4",
     "@tailwindcss/vite": "^4.1.13",
     "solid-js": "^1.5.1",
     "tailwindcss": "^4.1.13"
